# netflixproject24-25

./: CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Dockerfile.tst  Dockerfile.web  README.md  docker-compose.yml
src/: App.cpp  App.h  ConsoleMenu.cpp  ConsoleMenu.h  DBFile.cpp  DBFile.h  DELETECommand.cpp  GETCommand.cpp  GETCommand.h  ICommand.cpp  ICommand.h  IDataBase.h  IMenu.h  PATCHCommand.cpp  PATCHCommand.h  POSTCommand.cpp  POSTCommand.h  PublicFunctions.cpp  PublicFunctions.h  Runnable.h  SocketMenu.cpp  SocketMenu.h  ThreadFactory.cpp  ThreadFactory.h  addCommand.cpp  addCommand.h  client.py  executor.h  helpCommand.cpp  helpCommand.h  main.cpp  recommendCommand.cpp  recommendCommand.h  server.cpp  server.h  socketMenu.cpp  socketMenu.h
src/android/app/: build.gradle.kts
src/android/gradle/: libs.versions.toml
src/recommendation_system/: App.cpp  App.h  DBFile.cpp  DBFile.h  DELETECommand.cpp  DELETECommand.h  GETCommand.cpp  GETCommand.h  ICommand.h  POSTCommand.h  PublicFunctions.cpp  SocketMenu.h  ThreadPool.cpp  ThreadPool.h  helpCommand.h  main.cpp
src/tests/AddTests/: TestsForAdd.cpp
src/tests/AppTests/: AppTester.cpp  AppTester.h  TestsForApp.cpp  TestsForMutexInApp.cpp
src/tests/ConsoleMenuTests/: TestsForConsoleMenu.cpp
src/tests/DBFileTests/: DBFileTest.cpp
src/tests/DELETETests/: DeleteTest.cpp
src/tests/GETTests/: testsForGET.cpp
src/tests/HelpTests/: TestsForHelp.cpp
src/tests/PATCHTests/: TestsForPATCH.cpp
src/tests/POSTTests/: TestsForPost.cpp
src/tests/RecommendTests/: CMakeLists.txt  Dockerfile  testsForRecommend.cpp
src/tests/ServerTests/: TestsForServer.cpp
src/tests/SocketMenuTests/: SocketMenuTest.cpp
src/web_server/: app.js  package.json
src/web_server/controllers/: categories.js  images.js  movies.js  users.js  (+2 more)
(+196 files in other folders)
